replication graph works

--- a/web/cgi-bin/dynamo/inventory/html/inventory.html
+++ b/web/cgi-bin/dynamo/inventory/html/inventory.html
@@ -67,6 +67,7 @@
         </div>
         <div id="commitView">
           <input type="button" id="commitSelection" value="Show" onclick="loadData();">
+          <input type="button" id="getData" value="JSON" onclick="getData();">
         </div>
       </div>
       <section id="graphSection">
