--- a/web/cgi-bin/inventory/html/inventory.html
+++ b/web/cgi-bin/inventory/html/inventory.html
@@ -72,8 +72,14 @@
       </section>
       <section id="graphSection">
         <div id="graphCont">
-          <svg id="graph">
-          </svg>
+          <div id="axisBox">
+            <svg id="axis">
+            </svg>
+          </div>
+          <div id="graphBox">
+            <svg id="graph">
+            </svg>
+          </div>
         </div>
         <div id="legendCont">
           <svg id="legend">
