--- a/web/cgi-bin/detox/html/detox.html
+++ b/web/cgi-bin/detox/html/detox.html
@@ -34,8 +34,8 @@
       </nav>
       <div id="contents">
         <section id="summary">
-          <svg id="summaryGraph">
-          </svg>
+          <div id="summaryGraphBox">
+          </div>
         </section>
         <section id="details">
         </section>
