--- a/web/cgi-bin/detox/html/detox.html
+++ b/web/cgi-bin/detox/html/detox.html
@@ -19,13 +19,12 @@
   <body>
     <header id="header">
       <h1 id="pageTitle">Detox deletion cycle results</h1>
-      <!--      <h2 id="partitionName"></h2> -->
       <div id="cycle">
         <h2 id="cycleHeader">Cycle <span id="cycleNumber"></span> (<span id="cycleTimestamp"></span>)</h2>
         <nav id="cycles">
-          <div id="cycleJump">Cycle: <input type="text" id="jumpInput" size="10"><input type="button" value="Go" onclick="loadData($('#jumpInput').val(), currentPartition)"></div>
-          <div id="cycleNext" class="cycleLink"><span onclick="loadSummary(currentCycle+1, currentPartition);" class="clickable">&gt;</span></div>
-          <div id="cyclePrev" class="cycleLink"><span onclick="loadSummary(currentCycle-1, currentPartition);" class="clickable">&lt;</span></div>
+          <div id="cycleJump">Cycle: <input type="text" id="jumpInput" size="10"><input type="button" value="Go" onclick="loadSummary($('#jumpInput').val(), currentPartition, currentNorm)"></div>
+          <div id="cycleNext" class="cycleLink"><span onclick="loadSummary(currentCycle+1, currentPartition, currentNorm);" class="clickable">&gt;</span></div>
+          <div id="cyclePrev" class="cycleLink"><span onclick="loadSummary(currentCycle-1, currentPartition, currentNorm);" class="clickable">&lt;</span></div>
         </nav>
       </div>
     </header>
