--- a/web/cgi-bin/inventory/html/inventory.html
+++ b/web/cgi-bin/inventory/html/inventory.html
@@ -45,6 +45,10 @@
                 <option value="groups">Group</option>
               </select>
             </div>
+            <div style="height:60px;margin-top:10px;">
+              <input type="radio" name="physical" class="physical" value="y"${PHYSICAL_CHECKED}><span id="physicalText"></span> <br>
+              <input type="radio" name="physical" class="physical" value="n"${LOGICAL_CHECKED}><span id="logicalText"></span>
+            </div>
           </div>
           <div id="constraints">
             <div class="menuTitle">
