--- a/web/cgi-bin/inventory/html/inventory.html
+++ b/web/cgi-bin/inventory/html/inventory.html
@@ -47,7 +47,7 @@
             </div>
             <div style="height:60px;margin-top:10px;">
               <input type="radio" name="physical" class="physical" value="y"${PHYSICAL_CHECKED}><span id="physicalText"></span> <br>
-              <input type="radio" name="physical" class="physical" value="n"${LOGICAL_CHECKED}><span id="logicalText"></span>
+              <input type="radio" name="physical" class="physical" value="n"${PROJECTED_CHECKED}><span id="projectedText"></span>
             </div>
           </div>
           <div id="constraints">
