last_update in js

--- a/web/cgi-bin/inventory/html/inventory.html
+++ b/web/cgi-bin/inventory/html/inventory.html
@@ -19,7 +19,7 @@
   <body>
     <header id="header">
       <h1 id="pageTitle">Dynamo site and dataset statistics</h1>
-      <div id="lastUpdate">Last update: ${LAST_UPDATE}</div>
+      <div id="lastUpdate">Last update: <span id="lastUpdateTimestamp"></span></div>
     </header>
     <main id="main">
       <section id="viewSelection">
