saving the policy tag in history

--- a/web/cgi-bin/detox/html/detox.html
+++ b/web/cgi-bin/detox/html/detox.html
@@ -20,7 +20,7 @@
     <header id="header">
       <h1 id="pageTitle">Detox deletion cycle results</h1>
       <div id="cycle">
-        <h2 id="cycleHeader">Cycle <span id="cycleNumber"></span> (<span id="cycleTimestamp"></span>)</h2>
+        <h2 id="cycleHeader"></h2>
         <nav id="cycles">
           Cycle: 
           <span onclick="loadSummary(previousCycle, currentPartition, currentNorm);" class="clickable">Previous</span>
