--- a/web/cgi-bin/detox/html/detox.html
+++ b/web/cgi-bin/detox/html/detox.html
@@ -23,8 +23,8 @@
         <h2 id="cycleHeader"></h2>
         <nav id="cycles">
           Cycle: 
-          <span onclick="loadSummary(previousCycle, currentPartition, currentNorm);" class="clickable">Previous</span>
-          <span onclick="loadSummary(nextCycle, currentPartition, currentNorm);" class="clickable">Next</span>
+          <span id="previous">Previous</span>
+          <span id="next">Next</span>
           <input type="text" id="jumpInput" size="10"><input type="button" value="Go" onclick="loadSummary($('#jumpInput').val(), currentPartition, currentNorm)">
         </nav>
       </div>
