web updates - show comments

--- a/web/cgi-bin/detox/html/detox.html
+++ b/web/cgi-bin/detox/html/detox.html
@@ -18,9 +18,10 @@
   </head>
   <body>
     <header id="header">
-      <h1 id="pageTitle">Detox deletion cycle results</h1>
+      <h1 id="pageTitle">Detox deletion results</h1>
       <div id="cycle">
         <h2 id="cycleHeader"></h2>
+        <div id="cycleComments"></div>
         <nav id="cycles">
           Cycle: 
           <span id="previous">Previous</span>
