updating inventory.php to only use disk

--- a/web/cgi-bin/inventory/html/inventory.html
+++ b/web/cgi-bin/inventory/html/inventory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dynamo site and dataset statistics</title>
+    <title>Dynamo disk pool status</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="css/dynamo.css" rel="stylesheet">
     <link href="css/inventory.css" rel="stylesheet">
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header id="header">
-      <h1 id="pageTitle">Dynamo site and dataset statistics</h1>
+      <h1 id="pageTitle">Dynamo disk pool status</h1>
       <div id="lastUpdate">Last update: <span id="lastUpdateTimestamp"></span></div>
     </header>
     <main id="main">
