added deletion details links

--- a/web/cgi-bin/detox/html/detox.html
+++ b/web/cgi-bin/detox/html/detox.html
@@ -41,6 +41,13 @@
           <div id="summaryGraphBox">
           </div>
         </section>
+        <section id="deletionDetails">
+          <h3>Get details:</h3>
+          <ul>
+            <li><span id="download">Download deletion list</span></li>
+            <li><span id="phedex">PhEDEx requests page</span></li>
+          </ul>
+        </section>
         <section id="details">
         </section>
       </div>
