giving a bit better visual to detoxlock.php

--- a/web/cgi-bin/registry/html/detoxlock.html
+++ b/web/cgi-bin/registry/html/detoxlock.html
@@ -4,6 +4,7 @@
     <title>Detox locks</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="css/dynamo.css" rel="stylesheet">
+    <link href="css/detoxlock.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="http://spin.js.org/spin.min.js"></script>
@@ -24,6 +25,13 @@
           <article id="enabled">
             <h3>Enabled locks</h3>
             <table>
+              <col class="user"></col>
+              <col class="items"></col>
+              <col class="sites"></col>
+              <col class="groups"></col>
+              <col class="created"></col>
+              <col class="expires"></col>
+              <col class="comment"></col>
               <thead>
                 <tr><th>User</th><th>Item(s)</th><th>Site(s)</th><th>Group(s)</th><th>Created</th><th>Expires</th><th>Comment</th></tr>
               </thead>
@@ -34,6 +42,13 @@
           <article id="disabled">
             <h3>Disabled locks</h3>
             <table>
+              <col class="user"></col>
+              <col class="items"></col>
+              <col class="sites"></col>
+              <col class="groups"></col>
+              <col class="created"></col>
+              <col class="expires"></col>
+              <col class="comment"></col>
               <thead>
                 <tr><th>User</th><th>Item(s)</th><th>Site(s)</th><th>Group(s)</th><th>Created</th><th>Expires</th><th>Comment</th></tr>
               </thead>
