tiny steps towards interface

--- a/web/cgi-bin/dynamo/interface/html/interface.html
+++ b/web/cgi-bin/dynamo/interface/html/interface.html
@@ -20,7 +20,7 @@
 	<form action="http://t3desk006.mit.edu/dynamo/dynamo/upload_file.php" method="post"
 	      enctype="multipart/form-data">
 	  <label for="emailAddress">Email address:</label><br>
-	  <input id="emailAddress" type="email"><br>
+	  <input type="email" name="email" id="emailAddress"><br>
 	  <label for="file">Policy file</label><br>
 	  <input type="file" name="file" id="file"><br>
 	  <button class="button">Sumbit</button>
