--- a/web/cgi-bin/dynamo/interface/html/interface.html
+++ b/web/cgi-bin/dynamo/interface/html/interface.html
@@ -16,15 +16,20 @@
       <h1 id="pageTitle">Dynamo deletion campaign interface</h1>
     </header>
     <main id="main">
-      <section id="viewSelection">
-	<form action="http://t3desk006.mit.edu/dynamo/dynamo/upload_file.php" method="post"
-	      enctype="multipart/form-data">
-	  <label for="emailAddress">Email address:</label><br>
-	  <input type="email" name="email" id="emailAddress"><br>
-	  <label for="file">Policy file</label><br>
-	  <input type="file" name="file" id="file"><br>
-	  <button class="button">Sumbit</button>
-	</form>
+      <section id="hSpace">
+      </section>
+      <section id="uploadSection">
+	<center>
+	  <form action="http://t3desk006.mit.edu/dynamo/dynamo/upload_file.php" method="post"
+		enctype="multipart/form-data">
+	    <label for="emailAddress">Email address</label><br>
+	    <input type="email" name="email" id="emailAddress"><br>
+	    <br></br>
+	    <label for="file">Policy file</label><br>
+	    <input type="file" name="file" id="file">
+	    <button class="button">Sumbit</button>
+	  </form>
+	</center>
       </section>
     </main>
     <footer id="footer">
