Command line interface working

--- a/web/cgi-bin/dynamo/interface/html/interface.html
+++ b/web/cgi-bin/dynamo/interface/html/interface.html
@@ -26,10 +26,11 @@
 	  <form action="http://t3desk006.mit.edu/dynamo/dynamo/upload_file.php?user=${USER}" method="post"
 		enctype="multipart/form-data">
 	    <br></br>
+	    <br></br>
 	    <label for="emailAddress">Email address results should be sent to:</label><br>
 	    <input type="email" name="email" id="emailAddress"><br>
 	    <br></br>
-	    <label for="file">Policy file</label><br>
+	    <label for="file">Policy file (must be .txt)</label><br>
 	    <input type="file" name="file" id="file">
 	    <button class="button">Sumbit</button>
 	  </form>
