and referencing it from html

--- a/web/cgi-bin/dynamo/detox/html/detox.html
+++ b/web/cgi-bin/dynamo/detox/html/detox.html
@@ -7,7 +7,7 @@
     <link href="css/detox.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="http://spin.js.org/spin.min.js"></script>
+    <script type="text/javascript" src="js/spin.min.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/detox.js"></script>
     <script type="text/javascript">
