--- a/web/cgi-bin/registry/html/activitylock_help.html
+++ b/web/cgi-bin/registry/html/activitylock_help.html
@@ -22,7 +22,7 @@
       There is NO browser-friendly interface for application locks at the moment, aside from this manual page. Use
       cURL to access the API:
       <pre>
-        curl -k --cert <i>proxy</i> --key <i>proxy</i> 'https://dynamo.mit.edu/registry/activitylock/<i>command</i>[?<i>options</i>]'
+        curl --cert <i>proxy</i> --key <i>proxy</i> 'https://dynamo.mit.edu/registry/applock/<i>command</i>[?<i>options</i>]'
       </pre>
       where <i>proxy</i> is a valid CMS grid proxy and <i>command</i> is one of the commands listed below. <br>
       <span style="color:red;">Note that authentication with grid proxies work only with cURL+OpenSSL, which is not the default build in Scientific Linux and CentOS. CMS environment sourced from CVMFS provides a working configuration.</span>
@@ -32,25 +32,27 @@
     <ul>
       <li>Lock detox:
         <pre>
-          activitylock/lock?app=detox
+          applock/lock?app=detox
         </pre>
-        When the lock is successful, an "OK: Lock active" message is sent back as a JSON string. If the application is already locked by
-        another user, a "Failed: application already locked" message is sent back.
+        When the lock is successful, an "OK" message is sent back as a JSON string. If the application is already locked by
+        another user, a "WAIT" message is sent back. In this case, the lock is registered in the queue and will become active as soon
+        as the previous locks are removed. This command can be issued multiple times to poll the change from "WAIT" to "OK" - there will
+        always be only one lock from a user+service registered in the queue at a time.
       </li>
       <li>Lock detox as a service user "prodsystem":
         <pre>
-          activitylock/lock?service=prodsystem&amp;app=detox
+          applock/lock?service=prodsystem&amp;app=detox
         </pre>
       </li>
       <li>Unlock detox:
         <pre>
-          activitylock/unlock?app=detox
+          applock/unlock?app=detox
         </pre>
         Only locks created by your user name and service name can be released.
       </li>
       <li>Check the lock status:
         <pre>
-          activitylock/check
+          applock/check
         </pre>
       </li>
     </ul>
