making web work the way we want it

--- a/web/cgi-bin/dynamo/inventory/html/inventory.html
+++ b/web/cgi-bin/dynamo/inventory/html/inventory.html
@@ -19,6 +19,7 @@
   <body>
     <header id="header">
       <h1 id="pageTitle">Dynamo disk pool status</h1>
+      <div id="error"></div>
       <div id="lastUpdate">Last update: <span id="lastUpdateTimestamp"></span></div>
     </header>
     <main id="main">
