--- a/web/html/header_common.html
+++ b/web/html/header_common.html
@@ -3,5 +3,12 @@
   <head>
     <title>{_TITLE_}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link href="/css/dynamo.css" rel="stylesheet">{_STYLESHEETS_}{_HEADER_STYLESHEET_}
+    {_SCRIPTS_}{_HEADER_SCRIPT_}
   </head>
   <body>
+    <header id="header">
+      <h1 id="pageTitle">{_TITLE_}</h1>
+      <div id="error"></div>{_TITLEBLOCK_}
+    </header>
+    <main id="main">
