--- a/web/html/header_common.html
+++ b/web/html/header_common.html
@@ -4,7 +4,9 @@
     <title>{_TITLE_}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="/css/dynamo.css" rel="stylesheet">{_STYLESHEETS_}{_HEADER_STYLESHEET_}
-    {_SCRIPTS_}{_HEADER_SCRIPT_}
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/spin.min.js"></script>{_SCRIPTS_}{_HEADER_SCRIPT_}
   </head>
   <body>
     <header id="header">
