--- a/web/html/inventory/stats.html
+++ b/web/html/inventory/stats.html
@@ -13,7 +13,7 @@
             </div>
             <div style="height:30px;margin-left:10px;">for each</div>
             <div style="height:30px;">
-              <select id="categories" name="categories">
+              <select id="list_by" name="list_by">
                 {CATEGORIES}
               </select>
             </div>
