--- a/web/html/detox/monitor.html
+++ b/web/html/detox/monitor.html
@@ -1,6 +1,10 @@
       <nav id="datasetSearchNav">
         <div id="datasetsOnDisplay"></div>
-        <div class="datasetSearchIndex">Find dataset: </div><div class="datasetSearchInputs"><input type="text" class="datasetSearch" id="newDatasetSearch" onkeypress="if (event.keyCode == 13) findDataset();"> <input type="button" value="Search" onclick="findDataset()" class="datasetSearchButton"></div>
+        <div class="datasetSearchIndex">Find dataset: </div>
+        <div class="datasetSearchInputs">
+          <input type="text" class="datasetSearch" id="newDatasetSearch" onkeypress="if (event.keyCode == 13) findDataset();">
+          <input type="button" value="Search" onclick="findDataset()" class="datasetSearchButton">
+        </div>
         </div>
       </nav>
       <nav id="partitions">
