--- a/web/html/detox/monitor_titleblock.html
+++ b/web/html/detox/monitor_titleblock.html
@@ -2,11 +2,12 @@
       <div id="cycle">
         <h2 id="cycleHeader"></h2>
         <div id="cycleComments"></div>
+        <div id="cycleAlert"></div>
         <nav id="cycles">
           Cycle: 
           <span id="previous">Previous</span>
           <span id="next">Next</span>
           <input type="text" id="jumpInput" size="10" onkeypress="if (event.keyCode == 13) loadSummary(this.value, currentPartition, currentNorm)">
-          <input type="button" value="Go" onclick="loadSummary($('#jumpInput').val(), currentPartition, currentNorm)">
+          <input type="button" id="jumpButton" value="Go" onclick="loadSummary($('#jumpInput').val(), currentPartition, currentNorm)">
         </nav>
       </div>
