--- a/web/html/header_common.html
+++ b/web/html/header_common.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header id="header">
-      <h1 id="pageTitle">{_TITLE_}</h1>
-      <div id="error"></div>{_TITLEBLOCK_}
+      <h1 id="pageTitle">{_TITLE_}</h1>{_TITLEBLOCK_}
+      <div id="error"></div>
     </header>
     <main id="main">
