--- a/web/html/transfers/monitor.html
+++ b/web/html/transfers/monitor.html
@@ -4,8 +4,18 @@
           <col id="from">
           <col id="to">
           <col id="lfn">
+          <col id="size">
           <col id="status">
           <col id="start">
           <col id="finish">
+          <tr>
+            <th>Task</th>
+            <th>From</th>
+            <th>To</th>
+            <th>LFN</th>
+            <th>Size (GB)</th>
+            <th>Status</th>
+            <th>Start (UTC)</th>
+            <th>Finish (UTC)</th>
         </table>
       </div>
