adding no-JS version of transfer list

--- a/web/html/transfers/monitor_static.html
+++ b/web/html/transfers/monitor_static.html
@@ -23,6 +23,7 @@
             </tr>
           </thead>
           <tbody id="transferListBody">
+            {_ROWS_}
           </tbody>
         </table>
       </div>
