--- a/web/html/detox/locks_help.html
+++ b/web/html/detox/locks_help.html
@@ -83,7 +83,7 @@
         <p>
           Upload a JSON as POST data with this command. Disables all locks owned by the user first and loads the content of the uploaded data. The JSON format is
           <pre>
-            [{"item": "item_name", "sites": "sites_pattern", "groups": "groups_pattern", "expires": "2017-12-31 00:00:00", "comment": "comment_string"}, ...]
+            [{{"item": "item_name", "sites": "sites_pattern", "groups": "groups_pattern", "expires": "2017-12-31 00:00:00", "comment": "comment_string"}}, ...]
           </pre>
         </p>
         Sites, groups, and comment are optional. Takes option <strong>service</strong>.
